--- a/src/Makefile.Linux.GCC64
+++ b/src/Makefile.Linux.GCC64
@@ -6,12 +6,12 @@ BUILD_DEFINE = Linux_GCC64
 
 # -----------------------------------------------------------------------------
 
-CXX = /usr/bin/g++4
+CXX = /usr/bin/g++
 
-INCLUDES = -I/usr/include/c++/4.8 -I/usr/include
+INCLUDES = -I/usr/include/c++/7 -I/usr/include
 
-LFLAGS = -L/usr/lib/gcc/x86_64-linux-gnu/4.8.1
-CXXFLAGS = -O3  -std=c++11 $(INCLUDES) $(DEFINES)
+LFLAGS = -L/usr/lib/gcc/x86_64-linux-gnu/7
+CXXFLAGS = -O3  -std=c++17 $(INCLUDES) $(DEFINES)
 
 PLATFORM_LIBS = -lpthread -lrt -ldl -lm -lnsl -lstdc++
 
