--- a/DMScu/src/Makefile.Linux.GCC64D
+++ b/DMScu/src/Makefile.Linux.GCC64D
@@ -8,9 +8,9 @@ BUILD_DEFINE = Linux_GCC64
 
 CXX = /usr/bin/g++
 
-INCLUDES = -I/usr/include/c++/5.4.0 -I/usr/include
+INCLUDES = -I/usr/include/c++/7 -I/usr/include
 
-LFLAGS = -L/usr/lib/gcc/x86_64-linux-gnu/5.4.0
+LFLAGS = -L/usr/lib/gcc/x86_64-linux-gnu/7
 CXXFLAGS = -g -std=c++17 $(INCLUDES) $(DEFINES)
 
 PLATFORM_LIBS = -lpthread -lrt -ldl -lm -lnsl -lstdc++
