--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,13 @@ include(AddUninstallTarget)
 add_executable(matrix_tester src/matrix_tester.cc)
 target_include_directories(matrix_tester PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_include_directories(matrix_tester PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/DMScu/include)
+if (UNIX)
+  # Find pthreads library
+  set(THREADS_PREFER_PTHREAD_FLAG ON)
+  find_package(Threads REQUIRED)
+  target_link_libraries(dataframe_tester Threads::Threads)
+  target_link_libraries(vectors_tester Threads::Threads)
+endif (UNIX)
 
 # Enable ctest, testing so we can see if unit tests pass or fail in CI
 enable_testing()
