Added license statement to all source files

--- a/src/Makefile.Linux.GCC64D
+++ b/src/Makefile.Linux.GCC64D
@@ -8,7 +8,7 @@ BUILD_DEFINE = Linux_GCC64
 
 CXX = /usr/bin/g++
 
-INCLUDES = -I/usr/include/c++/7 -I/usr/include
+INCLUDES = -I/usr/include/c++/7 -I/usr/include -I/Users/hosseinmoein/pcode
 
 LFLAGS =
 CXXFLAGS = -g -std=c++17 $(INCLUDES) $(DEFINES)
