--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ matrix:
             - g++-7
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-    - os: osx
-      osx_image: xcode8
-      env:
-        - MATRIX_EVAL="brew update && (brew outdated gcc5 || brew upgrade gcc5) && brew install gcc5 && CC=gcc-5 && CXX=g++-5"
+#    - os: osx
+#      osx_image: xcode8
+#      env:
+#        - MATRIX_EVAL="brew update && (brew outdated gcc5 || brew upgrade gcc5) && brew install gcc5 && CC=gcc-5 && CXX=g++-5"
 
 before_install:
   - eval "${MATRIX_EVAL}"
