--- a/src/Makefile.Linux.GCC64
+++ b/src/Makefile.Linux.GCC64
@@ -11,7 +11,7 @@ CXX = /usr/bin/g++
 INCLUDES = -I/usr/include/c++/7 -I/usr/include -I/Users/hosseinmoein/pcode
 
 LFLAGS =
-CXXFLAGS = -O3  -std=c++17 $(INCLUDES) $(DEFINES)
+CXXFLAGS = -O3  -std=c++17 $(INCLUDES) $(DEFINES) -std=c++20
 
 PLATFORM_LIBS = -lpthread -ldl -lm -lstdc++
 
